--- a/Gobot/Gobot/Content/Bet.scss
+++ b/Gobot/Gobot/Content/Bet.scss
@@ -78,7 +78,7 @@ $height: 100px;
 }
 
 .manageBet {
-    z-index: 995;
+    z-index: 800;
     float: right !important;
     height: $height;
 
@@ -173,8 +173,6 @@ $betH: 300px;
 
             > h1 { opacity: 1; }
         }
-
-    
 }
 
 #bet_chooseTeam, #bet_placeBet, #getCredits {
@@ -185,7 +183,7 @@ $betH: 300px;
             width: 4px;
             left: calc(50% - 2px);
             background-color: $darkerGrey;
-            z-index: 999;
+            z-index: 801;
 
         > div {
             $boxH: 50px;
@@ -359,30 +357,13 @@ $betH: 300px;
     > .separator { background-color: transparent !important; > div { background-color: $darkGrey !important; } }
 }
 
-/*
-    <div id="teamBets_container">
-        <div id="teamBets">
-            <div id="bets_header">
-                <h1>TEAM_NAME</h1>
-                <h3 class="grey">JOUEURS AYANT MISÉ SUR CETTE ÉQUIPE:</h3>
-                <div id="teamBets_close"></div>
-            </div>
-            <div id="bets_users">
-                <div class="user">
-                    <div class="bet_img">
-                        <img/><h2>PLAYER_NAME</h2><div class="link"></div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-*/
 #teamBets_container {
     position: fixed;
     display: block;
     width: 100%;
     height: 100%;
     background-color: rgba(0,0,0,0.75);
+    z-index: 899;
 
     > #teamBets {
         position: relative;
@@ -406,67 +387,118 @@ $betH: 300px;
                 display: block;
                 width: 100%;
                 color: $off-white;
+                text-align: center;
+                text-transform: uppercase;
             }
-                h1 { font: italic 900 48px $font; }
-                h3 { font: italic 900 22px $font; }
+                h1 { font: italic 900 48px $font; margin-bottom: 10px; }
+                h3 { font: italic 900 22px $font; margin-top: 5px; }
 
             > #teamBets_close {
                 position: absolute;
                 display: block;
+                top: 0;
                 width: 70px;
                 height: 70px;
                 right: 0 !important;
-                background: no-repeat center url('~/Images/close_grey.png');
+                background: no-repeat center url('/Images/close_grey.png');
                 background-size: 23px;
+                cursor: pointer;
+                z-index: 90;
             }
-                > #teamBets_close:hover { background-image: url('~/Images/close_red.png'); }
+                > #teamBets_close:hover { background-image: url('/Images/close_menuColor.png'); }
         }
 
         > #bets_users {
             display: block;
             position: relative;
-            width: 90%;
+            width: 80%;
             height: auto;
-            overflow: scroll;
-            padding: 0 5%;
+            overflow-y: auto;
+            overflow-x: hidden;
+            padding: 0 10%;
 
-            > .user {
-                display: block;
-                width: 100%;
-
-                > .bet_img {
+            > form {
+                > .user {
                     float: left;
+                    display: block;
+                    width: 100%;
+                    cursor: pointer;
 
                     > img {
-                        position: absolute;
+                        float: left;
+                        display: block;
+                        position: relative;
                         width: 70px;
                         height: 70px;
                         border-radius: 50%;
                         border: 5px solid rgba(255,255,255,0.3);
+                        margin: 15px 0;
+                    }
+
+                    > .link {
+                        float: left;
+                        position: relative;
+                        display: block;
+                        height: 24px;
+                        width: 24px;
+                        background: no-repeat center url('/Images/ext_link.png');
+                        background-size: 26px;
+                        display: none;
+                    }
+
+                    > h2 {
+                        float: left;
+                        position: relative;
+                        display: block;
+                        font: italic 900 30px $font;
+                        color: $grey;
+                        margin: 0 15px 0 25px;
+                        max-width: calc(100% - 154px);
+                        white-space: nowrap;
+                        text-transform: uppercase;
+                        overflow: hidden;
                     }
                 }
-
-                > .link {
-                    float: left;
-                    display: block;
-                    height: 100%;
-                    width: auto;
-                    background: no-repeat center url('~/Images/ext_link.png');
-                    background-size: 26px;
-                    display: none;
-                }
-
-                > h2 {
-                    float: left;
-                    display: block;
-                    font: italic 900 30px $font;
-                    color: $grey;
-                }
+                    > .user:hover {
+                        > h2 { color: $off-white; }
+                        > .link { display: block; }
+                    }
             }
-                > .user:hover {
-                    > h2 { color: $off-white; }
-                    > .link { display: block; }
-                }
         }
     }
 }
+    @media screen and (max-height: 800px) { #teamBets { height: 100% !important; } }
+
+.day {
+    background-color: transparent;
+    padding: 25px 0 10px;
+
+    > h2 { color: $menuColor; text-transform: uppercase; }
+}
+
+#showNextDay {
+    float: right;
+    width: auto;
+    background-color: transparent;
+    margin: 10px 0;
+    padding: 30px 30px;
+    cursor: pointer;
+
+    > h2 { float: left; text-transform: uppercase; }
+    > div {
+        float: left;
+        display: block;
+        position: relative;
+        height: 26px;
+        width: 16px;
+        background: no-repeat center url('/Images/plus.png');
+        background-size: 16px;
+        margin: 0 10px;
+        opacity: 0;
+    }
+}
+    #showNextDay:hover {
+        background-color: $infoBgColor;
+        > h2 { color: $menuColor; text-transform: uppercase; }
+        > div { opacity: 1; }
+    }
