--- a/Gobot/Gobot/Views/Stats/Schedule.cshtml
+++ b/Gobot/Gobot/Views/Stats/Schedule.cshtml
@@ -92,16 +92,8 @@
         });
 
         function onResize() {
-            h_align_window($(".info_container"));
             h_align_window($("#getCredits"));
-
-            $(".info > div").each(function () {
-                if ($(this).children().children().length > 0 && $(this).children().height() == $(this).height())
-                    v_align($(this).children().children(), $(this), getHeightOfChilds($(this).children()));
-                else
-                    v_align($(this).children(), $(this), getHeightOfChilds($(this)))
-            });
         }
     </script>
 }
-
+@Scripts.Render("~/Scripts/bets.js")
