--- a/Gobot/Gobot/Content/Home.css
+++ b/Gobot/Gobot/Content/Home.css
@@ -498,6 +498,7 @@ body {
           position: relative;
           float: left;
           color: #963434;
+          height: 0 !important;
           font: 400 14px Lato, Arial, sans-serif;
           width: 100%;
           margin-top: 3px;
