--- a/Gobot/Gobot/Content/Home.scss
+++ b/Gobot/Gobot/Content/Home.scss
@@ -114,6 +114,7 @@ body { overflow: hidden; }
                     position: relative;
                     float: left;
                     color: $red;
+                    height: 0 !important;
                     font: 400 14px $font;
                     width: 100%;
                     margin-top: 3px;
