--- a/Gobot/Gobot/Views/Home/Index.cshtml
+++ b/Gobot/Gobot/Views/Home/Index.cshtml
@@ -16,7 +16,7 @@
     <meta name="description" content="@ViewBag.Desc" />
     <meta name="keywords" content="@ViewBag.Keywords">
     <link rel="icon" href="~/Images/gobot_logo.png" type="image/png" sizes="16x16 32x32 64x64">
-    <title>@ViewBag.Title - Gobotter</title>
+    <title>@ViewBag.Title - Gobot</title>
     <link href='https://fonts.googleapis.com/css?family=Lato:400,300,700,900,900italic,300italic,400italic,700italic' rel='stylesheet' type='text/css'>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     @Scripts.Render("~/bundles/modernizr")
