--- a/Gobot/Gobot/Views/Account/Index.cshtml
+++ b/Gobot/Gobot/Views/Account/Index.cshtml
@@ -321,6 +321,7 @@
 
             $(document).on("click", "#confirmPrompt", function() {
                 deleteAccount();
+                location.href="/Home/Index";
             });
         });
 
