Corrected bugs in #teamBets window + created method (TODO) to show loading animation befoire ajax request and remove it on response.

--- a/Gobot/Gobot/Views/Bet/Index.cshtml
+++ b/Gobot/Gobot/Views/Bet/Index.cshtml
@@ -21,7 +21,7 @@
     }
 }
 
-<div id="teamBets_container">
+@*<div id="teamBets_container">
     <div id="teamBets">
         <div id="bets_header">
             <div id="teamBets_close"></div>
@@ -67,7 +67,7 @@
             }
         </div>
     </div>
-</div>
+</div>*@
 
 <div class="info_container">
     @{
