--- a/Gobot/Gobot/Content/Menu.css
+++ b/Gobot/Gobot/Content/Menu.css
@@ -408,6 +408,27 @@ img {
     .prompt > span {
       font-size: 16px !important; } }
 
+#loading {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 899; }
+  #loading .loading, #loading > .success, #loading > .error {
+    position: relative;
+    display: block;
+    width: 70px;
+    height: 70px;
+    margin: 0 auto; }
+  #loading > .loading, #loading > .success, #loading > .error {
+    background: no-repeat center url("/Images/load.png"); }
+  #loading > .success {
+    border: 6px solid #f16651;
+    border-radius: 50%; }
+  #loading > .error {
+    border: 6px solid #51c24b;
+    border-radius: 50%; }
+
 /* -------------------------------------------------------------------------------------------------------------------
                                                         MENU
  ------------------------------------------------------------------------------------------------------------------- */
