--- a/Gobot/Gobot/Content/_global.scss
+++ b/Gobot/Gobot/Content/_global.scss
@@ -401,3 +401,35 @@ img                         { border: 0; }
         > span { font-size: 16px !important; }
     }
 }
+
+#loading {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.5);
+    z-index: 899;
+
+    .loading {
+        position: relative;
+        display: block;
+        width: 70px;
+        height: 70px;
+        margin: 0 auto;
+    }
+    > .loading {
+        @extend .loading;
+        background: no-repeat center url('/Images/load.png');
+    }
+
+    > .success {
+        @extend .loading;
+        border: 6px solid $menuColor;
+        border-radius: 50%;
+    }
+
+    > .error {
+        @extend .loading;
+        border: 6px solid $green;
+        border-radius: 50%;
+    }
+}
