--- a/Gobot/Gobot/Content/Menu.css
+++ b/Gobot/Gobot/Content/Menu.css
@@ -412,22 +412,40 @@ img {
   position: fixed;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.75);
   z-index: 899; }
-  #loading .loading, #loading > .success, #loading > .error {
+  #loading .load, #loading > .loading, #loading > .success, #loading > .error {
     position: relative;
     display: block;
     width: 70px;
     height: 70px;
     margin: 0 auto; }
-  #loading > .loading, #loading > .success, #loading > .error {
-    background: no-repeat center url("/Images/load.png"); }
+    #loading .load > div, #loading > .loading > div, #loading > .success > div, #loading > .error > div {
+      position: relative;
+      display: block;
+      width: 100%;
+      height: 100%;
+      display: none; }
+  #loading > .loading {
+    background: no-repeat center url("/Images/load.gif"); }
   #loading > .success {
-    border: 6px solid #f16651;
-    border-radius: 50%; }
-  #loading > .error {
     border: 6px solid #51c24b;
-    border-radius: 50%; }
+    border-radius: 50%;
+    width: 58px;
+    height: 58px; }
+    #loading > .success > div {
+      display: block;
+      background: no-repeat center url(/Images/check.png);
+      background-size: 40px; }
+  #loading > .error {
+    border: 6px solid #963434;
+    border-radius: 50%;
+    width: 58px;
+    height: 58px; }
+    #loading > .error > div {
+      display: block;
+      background: no-repeat center url(/Images/close_white.png);
+      background-size: 40px; }
 
 /* -------------------------------------------------------------------------------------------------------------------
                                                         MENU
