--- a/Gobot/Gobot/Content/Bet.css
+++ b/Gobot/Gobot/Content/Bet.css
@@ -160,7 +160,7 @@ input[type=number]::-webkit-outer-spin-button {
       left: 0;
       width: 100%;
       height: 100%;
-      z-index: 995 !important;
+      z-index: 880 !important;
       opacity: 0;
       color: white;
       background-color: rgba(0, 0, 0, 0.85);
@@ -180,12 +180,13 @@ input[type=number]::-webkit-outer-spin-button {
     width: 4px;
     left: calc(50% - 2px);
     background-color: #1f1f1f;
-    z-index: 801; }
+    z-index: 885; }
     #bet_chooseTeam > .separator > div, #bet_placeBet > .separator > div, #getCredits > .separator > div {
       position: relative;
       height: 50px;
       width: 50px;
       background-color: #1f1f1f;
+      top: calc(50% - 25px);
       left: -24px;
       -ms-transform: rotate(45deg);
       -webkit-transform: rotate(45deg);
