--- a/Gobot/Gobot/Views/Account/Index.cshtml
+++ b/Gobot/Gobot/Views/Account/Index.cshtml
@@ -264,7 +264,7 @@
             }
         }
 
-        $(document).on("click", "#options > div", function() {
+        $(document).on("click", "#options > div:not(#uploadForm)", function() {
             $("#options > div").not($(this)).each(function() {
                 if ($(this).is(":visible"))
                     $(this).hide();
@@ -281,7 +281,7 @@
         });
 
         $(document).on("click", "#optionSubmit > .close", function() {
-            $("#options > form").remove();
+            $("#options > #uploadForm").remove();
             $("#options > div").show();
         });
         $(document).on("click", "#userOptions", function() {
@@ -376,26 +376,28 @@
         }
 
         function showForm(id) {
-            $("#options").append('<form id="uploadForm" action="/Account/Index" enctype="multipart/form-data" method="post" autocomplete="off"><div id="optionForm"><div class="optionHeader"><img id="' + id + '_headerImg" src="/Images/option_' + id + '.png" /><h2>' + $('#' + id).find("h2").text() + '</h2></div></div></form>');
             var submitFn;
             if (id == "changeImg") {
-                $("#optionForm").append('<img id="UploadedImage" src="' + '@(Session["User_img"])' + '"><input id="ImageUploader" name="ImageUploader" type="file">');
+                $("#options").append('<form id="uploadForm" action="@(Url.Action("UpdateImage", "Account"))" method="post" enctype="multipart/form-data"><div id="optionForm"><div class="optionHeader"><img id="' + id + '_headerImg" src="/Images/option_' + id + '.png" /><h2>' + $('#' + id).find("h2").text() + '</h2></div></div></div>');
+                $("#optionForm").append('<img id="UploadedImage" src="' + '@(Session["User_img"])' + '"><input id="ImageUploader" name="ImageUploader" type="file" accept="image/*">');
                 $("#optionForm").append('<input id="UploadButton" type="button" value="Choisir une image...">');
-                submitFn = "submitImg()";
+                submitFn = "";
             }
             else if (id == "changePwd") {
+                $("#options").append('<div id="uploadForm"><div id="optionForm"><div class="optionHeader"><img id="' + id + '_headerImg" src="/Images/option_' + id + '.png" /><h2>' + $('#' + id).find("h2").text() + '</h2></div></div></div>');
                 $("#optionForm").append('<div><h2>Ancien <grey>mot de passe</grey></h2><input id="oldPwd" name="oldPwd" type="password"/></div>');
                 $("#optionForm").append('<div><h2>Nouveau <grey>mot de passe</grey></h2><input id="newPwd" name="newPwd" type="password"/></div>');
                 $("#optionForm").append('<div><h2>Confirmer <grey>mot de passe</grey></h2><input id="confirmPwd" name="confirmPwd" type="password"/></div>');
                 submitFn = "submitPwd()";
             }
             else {
+                $("#options").append('<div id="uploadForm"><div id="optionForm"><div class="optionHeader"><img id="' + id + '_headerImg" src="/Images/option_' + id + '.png" /><h2>' + $('#' + id).find("h2").text() + '</h2></div></div></div>');
                 $("#optionForm").append('<div><h2>Nouvelle<grey> adresse courriel</grey></h2><input id="newEmail" name="newEmail" type="text"/></div>');
                 $("#optionForm").append('<div><h2>Confirmer<grey> adresse courriel</grey></h2><input id="confirmEmail" name="confirmEmail" type="text"/></div>');
                 submitFn = "submitEmail()";
             }
 
-            $("#options > form").append('<div id="optionSubmit"><button type="submit" onClick="' + submitFn + '">Confirmer</button><div class="close"><img src="/Images/close_red.png" /><h3>Annuler</h3></div><img class="triangle" src="/Images/accountOption_triangle.png" /></div>');
+            $("#options > #uploadForm").append('<div id="optionSubmit"><button type="submit" onClick="' + submitFn + '">Confirmer</button><div class="close"><img src="/Images/close_red.png" /><h3>Annuler</h3></div><img class="triangle" src="/Images/accountOption_triangle.png" /></div>');
             $('#' + id).hide();
 
             v_align_margin($("#optionSubmit > button"), $("#optionSubmit"), $("#optionSubmit > button").height());
@@ -405,13 +407,28 @@
         }
 
         function submitImg() {
-            var postdata = $('#uploadForm').serialize();
-            var file = document.getElementById('ImageUploader').files[0];
-            var fd = new FormData();
-            fd.append("file", file);
-            var xhr = new XMLHttpRequest();
-            xhr.open("POST", "/Account/UpdateImage", false);
-            xhr.send(fd);
+            loading_create();
+            
+            $.ajax({
+                type: "POST",
+                url: "/Account/UpdateImage",
+                data: JSON.stringify(new { file: document.getElementById('ImageUploader').files[0] }),
+                success: function(){
+                    loading_remove(true, window.location.href);
+                },
+                error: function() {
+                    loading_remove(false, window.location.href);
+                },
+                dataType: "json",
+                contentType : "application/json"
+            });
+
+            //var file = document.getElementById('ImageUploader').files[0];
+            //var fd = new FormData();
+            //fd.append("file", file);
+            //var xhr = new XMLHttpRequest();
+            //xhr.open("POST", "/Account/UpdateImage", false);
+            //xhr.send(fd);
         }
 
         function submitEmail() {
