fixed bugs. Corrected todos.

--- a/Gobot/Gobot/Content/Home.css
+++ b/Gobot/Gobot/Content/Home.css
@@ -65,6 +65,10 @@ img {
 .offw, offw {
   color: #eeeeee; }
 
+.menuColor,
+menuColor {
+  color: #ffbf5c !important; }
+
 #header {
   background-color: #323232; }
   #header h6 {
