--- a/Gobot/Gobot/Views/Bet/Index.cshtml
+++ b/Gobot/Gobot/Views/Bet/Index.cshtml
@@ -66,7 +66,18 @@
                 }
 
                 <div class="info">
-                    <div class="time sqr"><h3>@Model[i].Date.Hour:@Model[i].Date.Minute.ToString("00")</h3></div>
+                    <div class="time sqr">
+                        @{
+                            if (Model[i].CurrentUserBet)
+                            {
+                                <h3 class="menuColor">@Model[i].Date.Hour:@Model[i].Date.Minute.ToString("00")</h3>
+                            }
+                            else
+                            {
+                                <h3>@Model[i].Date.Hour:@Model[i].Date.Minute.ToString("00")</h3>
+                            }
+                        }
+                    </div>
 
                     <div class="team team1">
                         <div class="img" style="background-image: url(/Images/@(Model[i].Teams[0].ImagePath));"></div>
@@ -142,12 +153,12 @@
             onResize();
         });
 
-        $(".manageBet > div").mouseenter(function () {
+        $(document).on("mouseenter", ".manageBet > div", function () {
             $(this).find("> div").css("left", -($(this).find("> div").find("h2").outerWidth()));
         });
-        $(".manageBet > .edit").mouseenter(function () {
+        $(document).on("mouseenter", ".manageBet > .edit", function () {
             $(this).prev().css("left", -($(this).find("> div").find("h2").outerWidth()));
-        }).mouseleave(function () {
+        }).on("mouseleave", ".manageBet > .edit", function () {
             $(".manageBet > .remove").css("left", 0);
         });
 
