--- a/Gobot/Gobot/Views/Watch/Index.cshtml
+++ b/Gobot/Gobot/Views/Watch/Index.cshtml
@@ -77,6 +77,8 @@
 @section Scripts {
     <script>
         $(window).ready(function () {
+            // TODO: Create method that adds (1 video watched and 25xp) to user. (Check if match is finished, if not, check if row in 'expliaison' with session username and 
+            //       match_id exists, if yes, do nothing, if not, add xp/video and row in db.
             setVideoPos();
         });
 
